KVM: Fix typo, change to admin user

--- a/kvm/module-vm/cloud_init.cfg
+++ b/kvm/module-vm/cloud_init.cfg
@@ -1,9 +1,9 @@
 #cloud-config
 users:
-  - name: centos
+  - name: admin
     sudo: ALL=(ALL) NOPASSWD:ALL
     groups: users, admin
-    home: /home/centos
+    home: /home/admin
     shell: /bin/bash
     ssh-authorized-keys:
       - ${SSH_PUBLIC_KEY}
